[package]
name = "proxmox-fido2"
description = "Highlevel API to libfido2 with dynamic loading of its library."
homepage = "https://www.proxmox.com"
version = "1.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc.workspace = true
log.workspace = true
