[package]
name = "pdm-api-types"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
description = "general API type helpers for PDM"

[dependencies]
anyhow.workspace = true
const_format.workspace = true
http.workspace = true
regex.workspace = true
serde.workspace = true
serde_plain.workspace = true

proxmox-acme-api.workspace = true
proxmox-auth-api = { workspace = true, features = ["api-types"] }
proxmox-lang.workspace = true
proxmox-config-digest.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro"] }
proxmox-section-config.workspace = true
proxmox-dns-api.workspace = true
proxmox-time.workspace = true
proxmox-serde.workspace = true
proxmox-subscription = { workspace = true, features = ["api-types"], default-features = false }

pve-api-types = { workspace = true }
