[package]
name = "pdm-api-types"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
description = "general API type helpers for PDM"

[dependencies]
anyhow.workspace = true
const_format.workspace = true
http.workspace = true
regex.workspace = true
serde.workspace = true
serde_plain.workspace = true

proxmox-acme-api.workspace = true
proxmox-access-control = { workspace = true, features = ["acl"] }
proxmox-auth-api = { workspace = true, features = ["api-types"] }
proxmox-apt-api-types.workspace = true
proxmox-lang.workspace = true
proxmox-config-digest.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro"] }
proxmox-section-config.workspace = true
proxmox-dns-api.workspace = true
proxmox-time.workspace = true
proxmox-serde.workspace = true
proxmox-subscription = { workspace = true, features = ["api-types"], default-features = false }

pbs-api-types = { workspace = true }
pve-api-types = { workspace = true }
