[package]
name = "pdm-client"
description = "Proxmox Datacenter Manager client library crate"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true

pdm-api-types.workspace = true

proxmox-access-control.workspace = true
proxmox-client.workspace = true
proxmox-rrd-api-types.workspace = true
proxmox-tfa = { workspace = true, features = [ "types" ] }

pve-api-types = { workspace = true, features = [ "client" ] }
pbs-api-types.workspace = true

[features]
default = []
hyper-client = [ "proxmox-client/hyper-client" ]
