[package]
name = "pdm-config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Configuration file management for PDM"

[dependencies]
anyhow.workspace = true
log.workspace = true
nix.workspace = true
once_cell.workspace = true
openssl.workspace = true
serde.workspace = true

proxmox-config-digest = { workspace = true, features = [ "openssl" ] }
proxmox-product-config.workspace = true
proxmox-schema.workspace = true
proxmox-section-config.workspace = true
proxmox-shared-memory.workspace = true
proxmox-simple-config.workspace = true
proxmox-sys = { workspace = true, features = [ "acl", "crypt", "timer" ] }
proxmox-acme-api.workspace = true
pdm-api-types.workspace = true
pdm-buildcfg.workspace = true
