[package]
name = "proxmox-section-config-typed"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = """
Extension for the section config for typed enums.
Subject to be merged into proxmox-section-config
"""

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

proxmox-section-config.workspace = true
